--- a/PaginaParroquia/PaginaParroquia/Views/Login/Index.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Login/Index.cshtml
@@ -30,13 +30,15 @@
 
             //@Html.EditorFor(model => model.Correo)
             //VARIANTE
-            @Html.TextBoxFor(model => model.usuario, new { @placeholder = "Ingrese su correo..." })
+            @Html.TextBoxFor(model => model.usuario, new { @placeholder = "Ingrese su usuario..." })
             @Html.ValidationMessageFor(model => model.usuario)
 
             <p></p>
             //@Html.EditorFor(model => model.pwd)
             //VARIANTE
-            @Html.PasswordFor(model => model.password, new { @placeholder = "Ingrese su contraseña..." })
+            
+            
+            @Html.PasswordFor(model => model.password, new { @placeholder = "Ingrese su contraseña..." });
             @Html.ValidationMessageFor(model => model.password)
 
             <p></p>
