--- a/PaginaParroquia/PaginaParroquia/Views/Shared/_Layout.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Shared/_Layout.cshtml
@@ -8,7 +8,9 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    @*<nav class="navbar navbar-dark bg-primary">*@
+    @*<nav class="navbar navbar-light bg-primary navbar-fixed-top">*@
+    <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #007bff; color: #fff" >
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -16,22 +18,37 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
+
+                <a href="@Url.Action("Index", "Home")" class="navbar-brand" >
+                    <img src="~/Img/Logo.png" width="50" height="50" alt="">
+                </a>
+
+
+                @*@Html.ActionLink("Parroquia La Santa Cruz", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
+
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <ul class="nav navbar-nav navbar-left">
+                    <li style="color: #fff">@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*Logout button*@
                 </ul>
+
+                <ul class="nav navbar-nav navbar-right ">
+                    <li><a href="@Url.Action("LogOutUser", "Login")" role="button" aria-pressed="true" position="left">Cerrar Sesión</a></li>
+                </ul>
+
+
             </div>
         </div>
-    </div>
+    </nav>
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Created by Sergio Calderon De Miguel</p>
         </footer>
     </div>
 
@@ -40,3 +57,4 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+ 
