Ajustes de la página de home, se crea menú de opciones

--- a/PaginaParroquia/PaginaParroquia/Content/bootstrap.css
+++ b/PaginaParroquia/PaginaParroquia/Content/bootstrap.css
@@ -19,6 +19,12 @@ footer {
     justify-content: center;
 }
 
+dropdown-menu {
+    background-color: #007bff;
+    
+}
+
+
 article,
 aside,
 details,
@@ -31,7 +37,7 @@ menu,
 nav,
 section,
 summary {
-  display: block;
+    display: block;
 }
 audio,
 canvas,
