--- a/PaginaParroquia/PaginaParroquia/Views/Shared/_Layout.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Shared/_Layout.cshtml
@@ -32,7 +32,16 @@
 
                 @*Logout button*@
                 <ul class="nav navbar-nav navbar-right ">
-                    <li><a href="@Url.Action("LogOutUser", "Login")" role="button" aria-pressed="true" position="left">Cerrar Sesión</a></li>
+
+                    <li class="nav-item dropdown" style="">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><b>Opciones</b></a>
+                        <div class="dropdown-menu" style="background-color: #007bff;">
+                    <a class="dropdown-item" href="@Url.Action("LogOutUser", "Login")" role="button" aria-pressed="true" position="left">Cerrar Sesión</a>
+                    <div class="dropdown-divider"></div>
+                       </div>
+                    </li>
+
+                    
                 </ul>
 
 
