--- a/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
@@ -16,19 +16,21 @@
         <div class="row justify-content-md-center">
             <div class="col-lg-6">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <a href="#">
+                        <img src="~/Img/add-contact.png" class="card-img-top" alt="..." />
+                    </a>
                     <div class="card-body">
                         <h5 class="card-title"><b>Crear Persona</b></h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <a href="#">
+                    <img src="~/Img/magnifier.png" class="card-img-top" alt="..." />
+                    </a>
                     <div class="card-body">
                         <h5 class="card-title"><b>Buscar</b></h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -38,19 +40,21 @@
         <div class="row justify-content-md-center">
             <div class="col-lg-6">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <a href="#">
+                        <img src="~/Img/BautismoLogo.png" class="card-img-top" alt="..." />
+                    </a>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title"><b>Bautismo</b></h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <a href="#">
+                        <img src="~/Img/LogoComunion.png" class="card-img-top" alt="..." />
+                    </a>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title"><b>Comunión</b></h5>
                     </div>
                 </div>
             </div>
@@ -60,19 +64,21 @@
         <div class="row justify-content-md-center">
             <div class="col-lg-6">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <a href="#">
+                        <img src="~/Img/LogoConfirmación.png" class="card-img-top" alt="..." />
+                    </a>              
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title"><b>Confirmación</b></h5>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <a href="#">
+                        <img src="~/Img/LogoMatrimonio.png" class="card-img-top" alt="..."/>
+                    </a>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title"><b>Matrimonio</b></h5>
                     </div>
                 </div>
             </div>
