--- a/PaginaParroquia/PaginaParroquia/Views/Shared/_Layout.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-left">
-                    <li style="color: #fff">@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
@@ -33,8 +33,8 @@
                 @*Logout button*@
                 <ul class="nav navbar-nav navbar-right ">
 
-                    <li class="nav-item dropdown" style="">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><b>Opciones</b></a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" style="color:darkgray;"><font size="4"><b>▼</b></font></a>
                         <div class="dropdown-menu" style="background-color: #007bff;">
                     <a class="dropdown-item" href="@Url.Action("LogOutUser", "Login")" role="button" aria-pressed="true" position="left">Cerrar Sesión</a>
                     <div class="dropdown-divider"></div>
