--- a/PaginaParroquia/PaginaParroquia/Views/Shared/_Layout.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Shared/_Layout.cshtml
@@ -36,9 +36,11 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" style="color:darkgray;"><font size="4"><b>▼</b></font></a>
                         <div class="dropdown-menu" style="background-color: #007bff;">
-                    <a class="dropdown-item" href="@Url.Action("LogOutUser", "Login")" role="button" aria-pressed="true" position="left">Cerrar Sesión</a>
-                    <div class="dropdown-divider"></div>
-                       </div>
+                            <a class="dropdown-item" href="@Url.Action("Create", "Usuarios")" role="button" aria-pressed="true" position="left">Crear Usuario</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="@Url.Action("LogOutUser", "Login")" role="button" aria-pressed="true" position="left">Cerrar Sesión</a>
+                            <div class="dropdown-divider"></div>
+                        </div>
                     </li>
 
                     
