Creación de modelos para sacramentos y vistas de persona

--- a/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
@@ -16,8 +16,8 @@
         <div class="row justify-content-md-center">
             <div class="col-lg-6">
                 <div class="card" style="width: 18rem;">
-                    <a href="#">
-                        <img src="~/Img/add-contact.png" class="card-img-top" alt="..." />
+                    <a href="@Url.Action("Index", "Personas")">
+                        <img src="~/Img/add-contact.png"  class="card-img-top" alt="..."  />
                     </a>
                     <div class="card-body">
                         <h5 class="card-title"><b>Crear Persona</b></h5>
