--- a/PaginaParroquia/PaginaParroquia/Views/Usuarios/Details.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Usuarios/Details.cshtml
@@ -28,19 +28,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.password)
+            @Html.HiddenFor(model => model.password)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.password)
+            @Html.HiddenFor(model => model.password)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PpMensaje)
+            @Html.HiddenFor(model => model.PpMensaje)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PpMensaje)
+            @Html.HiddenFor(model => model.PpMensaje)
         </dd>
 
     </dl>
