--- a/PaginaParroquia/PaginaParroquia/Views/Usuarios/Index.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Usuarios/Index.cshtml
@@ -1,22 +1,34 @@
-﻿@model IEnumerable<PaginaParroquia.Models.Usuario>
+﻿@*@model IEnumerable<PaginaParroquia.Models.Usuario>*@
+@model PagedList.IPagedList<PaginaParroquia.Models.Usuario>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css"/>
+
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Usuarios";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Usuarios</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear nuevo usuario", "Create")
 </p>
+@using (Html.BeginForm())
+{
+    <p>
+        Buscar por Usuario: @Html.TextBox("SearchString")
+        <input type="submit" value="Buscar"/>
+    </p>
+}
+
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.usuario)
+            @Html.ActionLink("Usuarios","Index", new {sortOrder = ViewBag.NameSortParm, currentFilter=ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Role.rol)
+            Roles
         </th>
         <th></th>
     </tr>
@@ -30,11 +42,15 @@
             @Html.DisplayFor(modelItem => item.Role.rol)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.idUsuario }) |
-            @Html.ActionLink("Details", "Details", new { id = item.idUsuario }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.idUsuario })
+            @Html.ActionLink("Editar", "Edit", new { id = item.idUsuario }) |
+            @Html.ActionLink("Detalles", "Details", new { id = item.idUsuario }) |
+            @Html.ActionLink("Borrar", "Delete", new { id = item.idUsuario })
         </td>
     </tr>
 }
 
 </table>
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0: Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page=> Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
