Personalización de la ventana de Personas

--- a/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Inicio";
 
     if (Session["idUsuario"] == null)
     {
@@ -20,7 +20,7 @@
                         <img src="~/Img/add-contact.png"  class="card-img-top" alt="..."  />
                     </a>
                     <div class="card-body">
-                        <h5 class="card-title"><b>Crear Persona</b></h5>
+                        <h5 class="card-title"><b>Personas</b></h5>
                     </div>
                 </div>
             </div>
