--- a/PaginaParroquia/PaginaParroquia/Views/Personas/Index.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Personas/Index.cshtml
@@ -1,11 +1,26 @@
-﻿@model IEnumerable<PaginaParroquia.Models.Persona>
+﻿@model PagedList.IPagedList<PaginaParroquia.Models.Persona>
+@using PagedList.Mvc;
+@using PaginaParroquia.Models
+<link href="~/Content/PagedList.css" rel="stylesheet" />
 
 @{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Personas";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Personas</h2>
+
+@using (Html.BeginForm())
+{
+    <p>
+        Buscar por: @Html.DropDownList("BuscarPor",
+new SelectList(Enum.GetValues(typeof(BuscarPor))),"----Buscar Por----", new { @id = "selectTipo", @class = "form-control"})
+        <br> @Html.TextBox("searchString",ViewBag.currentFilter as String, new { @id = "txtBuscar", @class = "form-control" }) <br />
+        <input type="submit" value="Buscar" id="btnBuscar" class="btn-primary" /> @*Genera el boton de buscar*@
+    </p>
+
+}
+
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -13,85 +28,142 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Cedula)
+            Cedula
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Nombre)
+            @Html.ActionLink("Nombre", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Apellido)
+            @Html.ActionLink("Apellido", "Index", new { sortOrder = ViewBag.Apellido1SortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Apellido2)
+            @Html.ActionLink("Apellido2", "Index", new { sortOrder = ViewBag.Apellido2SortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Fecha_Nacimiento)
+            @Html.ActionLink("Fecha Nacimiento", "Index", new { sortOrder = ViewBag.DateSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Lugar_Nacimiento)
+            Lugar de Nacimiento
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Nacionalidad)
+            @Html.ActionLink("Nacionalidad", "Index", new { sortOrder = ViewBag.NacionalidadSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Estado_Civil)
+            Estado Civil
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Lugar_Residencia)
+            Lugar de Residencia
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Profesion)
+            Profesion
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Religion)
+            Religion
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cedula)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Apellido)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Apellido2)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fecha_Nacimiento)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Lugar_Nacimiento)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nacionalidad)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Estado_Civil)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Lugar_Residencia)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Profesion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Religion)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.IDPersona }) |
-            @Html.ActionLink("Details", "Details", new { id = item.IDPersona }) |
-            @if (User.IsInRole("Admin"))
-            {
-                @Html.ActionLink("Delete", "Delete", new { id = item.IDPersona })
-            }
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cedula)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Apellido)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Apellido2)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Fecha_Nacimiento)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Lugar_Nacimiento)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nacionalidad)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Estado_Civil)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Lugar_Residencia)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Profesion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Religion)
+            </td>
+            <td>
+
+                @Html.ActionLink("Edit", "Edit", new { id = item.IDPersona }) |
+
+                @Html.ActionLink("Details", "Details", new { id = item.IDPersona }) |
+
+                @if (User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Delete", "Delete", new { id = item.IDPersona })
+                }
+                else
+                {
+                    <h9>Delete</h9>
+                }
+
+            </td>
+        </tr>
+    }
 
 </table>
+
+
+@section Scripts {
+
+    @Scripts.Render("~/bundles/jqueryui")
+    @Styles.Render("~/Content/cssjqryUi")
+
+    <script type="text/javascript">
+        //Encargado de ocultar el Textbox y el boton si el dropdownlist esta en el parametro predefinido
+        $(document).ready(function () {
+            $("#txtBuscar").attr('autocomplete', 'off');
+            if ($("#selectTipo").val() === "") {
+                $("#txtBuscar").hide();
+                $("#btnBuscar").hide();
+            }
+            else if ($("#selectTipo").val() === "Fecha_Nacimiento") {
+
+                $("#txtBuscar").show();
+                $("#txtBuscar").prop('disables',true);
+                
+                    $("#txtBuscar").datepicker({
+                        dateFormat: "mm/dd/yy",
+                        changeMonth: true,
+                        changeYear: true,
+                        yearRange: "-60:+0"
+                    });
+                
+
+                $("#btnBuscar").show();
+            }
+            else {
+                $("#txtBuscar").show();
+                $("#btnBuscar").show();
+                $("#txtBuscar").prop('disables', false);
+            }
+
+
+            $("#selectTipo").change(function () {
+
+                $("#txtBuscar").val("");
+                $("#btnBuscar").click();
+
+            });
+
+        });
+    </script>
+
+}
