--- a/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
         <div class="row justify-content-md-center">
             <div class="col-lg-6">
                 <div class="card" style="width: 18rem;">
-                    <a href="#">
+                    <a href="@Url.Action("Index", "Bautismos")">
                         <img src="~/Img/BautismoLogo.png" class="card-img-top" alt="..." />
                     </a>
                     <div class="card-body">
