--- a/PaginaParroquia/PaginaParroquia/Views/Personas/Create.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Personas/Create.cshtml
@@ -60,7 +60,7 @@
 
 
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Fecha_Nacimiento, new { htmlAttributes = new { @class = "form-control", @readonly = "true" } })
+                @Html.EditorFor(model => model.Fecha_Nacimiento, new { htmlAttributes = new { @id = "fecha", @class = "form-control", @readonly = "true" } })
                 @Html.ValidationMessageFor(model => model.Fecha_Nacimiento, "", new { @class = "text-danger" })
             </div>
 
@@ -132,7 +132,7 @@
     @Styles.Render("~/Content/cssjqryUi")
     <script type="text/javascript">
         $(document).ready(function () {
-            $('input[type=datetime]').datepicker({
+            $('#fecha').datepicker({
                 dateFormat: "dd/M/yy",
                 changeMonth: true,
                 changeYear: true,
