--- a/PaginaParroquia/PaginaParroquia/Views/Bautismos/Details.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Bautismos/Details.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Persona.Cedula)
+            Persona
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Persona.Cedula)
+            @Html.DisplayFor(model => model.Persona.Cedula) @Html.DisplayFor(model => model.Persona.Nombre)
         </dd>
 
         <dt>
@@ -134,6 +134,11 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.IDBautismo }) |
+    @if (User.IsInRole("Admin"))
+    {
+        @Html.ActionLink("Edit", "Edit", new { id = Model.IDBautismo }) 
+        <h8>|</h8>
+    } 
+  
     @Html.ActionLink("Back to List", "Index")
 </p>
