--- a/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
             </div>
             <div class="col-lg-6">
                 <div class="card" style="width: 18rem;">
-                    <a href="#">
+                    <a href="@Url.Action("Index", "PrimeraComunions")">
                         <img src="~/Img/LogoComunion.png" class="card-img-top" alt="..." />
                     </a>
                     <div class="card-body">
