--- a/PaginaParroquia/PaginaParroquia/Views/Shared/_Layout.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Shared/_Layout.cshtml
@@ -26,8 +26,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-left">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Información", "About", "Home")</li>
+                    @*<li>@Html.ActionLink("Contacto", "Contact", "Home")</li>*@
                 </ul>
 
                 @*Logout button*@
