--- a/PaginaParroquia/PaginaParroquia/Views/PrimeraComunions/Edit.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/PrimeraComunions/Edit.cshtml
@@ -17,21 +17,13 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.IDPrimeraComunion)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IDPersona, "IDPersona", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IDPersona", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IDPersona, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.IDPersona)
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IDBautismo, "IDBautismo", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IDBautismo", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IDBautismo, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.IDBautismo)
             </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Lugar_Comunion, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -41,13 +33,9 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Fecha, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Fecha, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Fecha, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.Fecha)
             </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Libro, htmlAttributes: new { @class = "control-label col-md-2" })
