Continuación y creación de confirma, se inició el index de confirma con el sortorder

--- a/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
+++ b/PaginaParroquia/PaginaParroquia/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
         <div class="row justify-content-md-center">
             <div class="col-lg-6">
                 <div class="card" style="width: 18rem;">
-                    <a href="#">
+                    <a href="@Url.Action("Index", "Confirmas")">
                         <img src="~/Img/LogoConfirmación.png" class="card-img-top" alt="..." />
                     </a>              
                     <div class="card-body">
